Documentación api terminada
